force-app/main/default/objects/Conga_Contact_Profile_Report_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls Conga Report Queries.</description>
    <fields>
        <fullName>Bio__c</fullName>
        <label>Bio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContAffilDetails__c</fullName>
        <label>ContAffilDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContQualDetails__c</fullName>
        <label>ContQualDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContRel__c</fullName>
        <label>ContRel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactInfo__c</fullName>
        <label>ContactInfo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventAttended__c</fullName>
        <label>EventAttended</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileImage__c</fullName>
        <label>FileImage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fund</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giving__c</fullName>
        <label>Giving</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRM__c</fullName>
        <label>PRM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateId__c</fullName>
        <label>TemplateId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Conga Contact Profile Report Setting</label>
</CustomObject>